Update to latest WebGPU spec

--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,12 @@
       "@typescript-eslint/parser": [".ts", ".tsx"]
     },
     "import/resolver": {
+      "node": {
+        "moduleDirectory": [
+          "node_modules",
+          "docs/js/vendor"
+        ]
+      },
       "typescript": {
         "alwaysTryTypes": true
       }
