Fixed Pipeline.ts warning:

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,11 @@
   "compilerOptions": {
     "noImplicitAny": true,
     "target": "esnext",
-    "module": "esnext"
+    "module": "esnext",
+    "baseUrl": "./",
+    "paths": {
+      "glslang": ["typings-custom/glslang"]
+    }
   },
   "include": [
     "src/**/*",
